// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Incomplete progress 1`] = `
<div
  className="progress-bar"
>
  <div
    className="progress-bar__progress"
    style={
      Object {
        "width": "60%",
      }
    }
  />
</div>
`;

exports[`Maxed out progressbar 1`] = `
<div
  className="progress-bar"
>
  <div
    className="progress-bar__progress progress-bar--max"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`value greater than max 1`] = `
<div
  className="progress-bar"
>
  <div
    className="progress-bar__progress progress-bar--max"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</div>
`;
